RESOLVED FIXED229633
[Cocoa] Drawing system fallback fonts to canvas causes a crash
https://bugs.webkit.org/show_bug.cgi?id=229633
Summary [Cocoa] Drawing system fallback fonts to canvas causes a crash
Myles C. Maxfield
Reported 2021-08-27 15:32:56 PDT
[Cocoa] Drawing system fallback fonts to canvas causes a crash
Attachments
Patch (7.27 KB, patch)
2021-08-27 15:34 PDT, Myles C. Maxfield
no flags
Patch (7.37 KB, patch)
2021-08-27 15:35 PDT, Myles C. Maxfield
no flags
Patch (9.34 KB, patch)
2021-08-27 15:41 PDT, Myles C. Maxfield
wenson_hsieh: review+
Patch for committing (9.12 KB, patch)
2021-08-27 15:56 PDT, Myles C. Maxfield
no flags
Myles C. Maxfield
Comment 1 2021-08-27 15:34:29 PDT
Myles C. Maxfield
Comment 2 2021-08-27 15:35:00 PDT
Myles C. Maxfield
Comment 3 2021-08-27 15:35:17 PDT
Wenson Hsieh
Comment 4 2021-08-27 15:40:03 PDT
Comment on attachment 436683 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=436683&action=review r=mews! > LayoutTests/fast/text/system-fallback-canvas.html:1 > +<!DOCTYPE html> Might be nice to have a ref-mismatch test to ensure that at least something was drawn to the canvas.
Myles C. Maxfield
Comment 5 2021-08-27 15:41:30 PDT
Wenson Hsieh
Comment 6 2021-08-27 15:54:15 PDT
Comment on attachment 436685 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=436685&action=review > LayoutTests/fast/text/draw-synthetic-system-bold-font-into-canvas-expected-mismatch.html:4 > +<script src="../../resources/js-test.js"></script> This should probably be removed.
Myles C. Maxfield
Comment 7 2021-08-27 15:56:47 PDT
Created attachment 436687 [details] Patch for committing
EWS
Comment 8 2021-08-31 00:18:22 PDT
Committed r281792 (241129@main): <https://commits.webkit.org/241129@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436687 [details].
Note You need to log in before you can comment on or make changes to this bug.