[Cocoa] Drawing system fallback fonts to canvas causes a crash https://bugs.webkit.org/show_bug.cgi?id=229633 <rdar://problem/81889036>

Reviewed by Wenson Hsieh.

Source/WebCore/PAL:

* pal/spi/cf/CoreTextSPI.h:

Source/WebKit:

Dot-prefixed font names don't survive the round-trip through
CTFontDescriptorCopyAttributes(CTFontCopyFontDescriptor(font)) unless you also
pass in the kCTFontOptionsSystemUIFont option.

Tests: fast/text/system-fallback-canvas.html
       fast/text/draw-synthetic-system-bold-font-into-canvas.html

* Shared/Cocoa/WebCoreArgumentCodersCocoa.mm:
(IPC::createCTFont):
(IPC::ArgumentCoder<Ref<WebCore::Font>>::decodePlatformData):

LayoutTests:

* fast/text/system-fallback-canvas-expected.txt: Added.
* fast/text/system-fallback-canvas.html: Added.


Canonical link: https://commits.webkit.org/241129@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281792 268f45cc-cd09-0410-ab3c-d52691b4dbfc